# web

./: Cargo.nix  Cargo.toml  README.md  flake.nix
src/: errors.rs  exec.rs  main.rs
templates/: base.html  frontpage.html  managepage.html
webroot/res/: manage.js  style.css
