[package]
name = "wharfix-web"
version = "0.1.0"
authors = ["Johan Thomsen <jth@wharfix.dev>"]
edition = "2021"

[dependencies]
clap = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
erased-serde = "0.3"
time = { version = "0.1" }
actix-web = "2"
actix-session = "0.3"
actix-rt = "1"
tokio = { version = "0.2", features = [ "full" ] }
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1"
askama = { git = "https://github.com/djc/askama.git", branch = "main" }
actix-files = "0.2"
oauth2 = "3"
mysql = "21"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
regex = "1"
strum = "0.19"
strum_macros = "0.19"
