[package]
name = "wharfix-web"
version = "0.1.0"
authors = ["Johan Thomsen <jth@wharfix.dev>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
erased-serde = "0.3"
time = { version = "0.1" }
actix-web = "2.0"
actix-session = "0.3"
actix-rt = "1.1.1"
tokio = { version = "0.2", features = [ "macros", "tcp" ] }
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4"
askama = "0.10"
actix-files = "0.2"
oauth2 = "3.0.0"
mysql = "18.2"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
regex = "1.3"
strum = "0.19"
strum_macros = "0.19"
